Version 1.7.1.99
------------------------------------------------------------------------------

NEW FEATURES AND FUNCTIONS

* `**ply` gain a `.inform` argument (previously only available in `llply`) - this gives more useful debugging information at the cost of some speed. (Thanks to Brian Diggs, #57)

* `colwise`, `numcolwise` and `catcolwise` now all accept additional arguments in .... (Thanks to Stavros Macrakis, #62)

* `here` makes it possible to use `**ply` + a function that uses non-standard evaluation (e.g. `summarise`, `mutate`, `subset`, `arrange`) inside a function.  (Thanks to Peter Meilstrup, #3)

* `join_all` recursively joins a list of data frames. (Fixes #29)

* `name_rows` provides a convenient way of saving and then restoring row names so that you can preserve them if you need to. (#61)

* `progress_time` (used with `.progress = "time"`) estimates the amount of time remaining before the job is completed. (Thanks to Mike Lawrence, #78)

* `summarise` now works iteratively so that later columns can refer to earlier.  (Thanks to Jim Hester, #44)

* `take` makes it easy to subset along an arbitrary dimension.

* Improved documentation thanks to patches from Tim Bates.

PARALLEL PLYR

* `**ply` gains a `.paropts` argumetns, a list of options that is passed onto `foreach` for controlling parallel computation.

* `*_ply` now accepts `.parallel` argument to enable parallel processing. (Fixes #60)

* Progress bars are disabled when using parallel plyr (Fixes #32)

PERFORMANCE IMPROVEMENTS

* `a*ply`: 25x speedup when indexing array objects, 3x speedup when indexing data frames.  This should substantially reduce the overhead of using `a*ply`

* `d*ply` subsetting has been considerably optimised: this will have a small impact unless you have a very large number of groups, in which case it will be considerably faster.

* `idata.frame`: Subsetting immutable data frames with `[.idf` is now
  faster (Peter Meilstrup)

* `quickdf` is around 20% faster
