@@ -3,14 +3,16 @@
 #' For each slice of an array, apply function then combine results into a
 #' list.
 #'
+#' The list will have "dims" and "dimnames" corresponding to the
+#' margins given. For instance \code{llply(x, c(3,2))} where \code{x}
+#' has dims \code{c(4,3,2)} will give a result with dims \code{c(2,3)}.
+#'
 #' \code{alply} is somewhat similar to \code{\link{apply}} for cases
 #' where the results are not atomic.
 #'
 #' @template ply
 #' @template a-
 #' @template -l
-#' @param .dims If TRUE, the result will be a list-array with
-#' dimensions determined by the margins.
 #' @export
 #' @examples
 #' alply(ozone, 3, quantile)
@@ -24,13 +26,10 @@ alply <- function(.data, .margins, .fun = NULL, ..., .expand = TRUE,
     .progress = .progress, .inform = .inform,
     .parallel = .parallel, .paropts = .paropts)
 
-  if (.dims) {
-    labels <- attr(pieces, "split_labels")
-    res_labels <- lapply(labels,
-      function(x) if(is.factor(x)) levels(x) else sort(unique(x)))
-    res_dim <- sapply(res_labels, length)
-    dim(res) <-  res_dim
-    dimnames(res) <- res_labels
-  }
+  labels <- attr(pieces, "split_labels")
+  res_labels <- lapply(labels, function(x) as.character(unique(x)))
+  res_dim <- sapply(res_labels, length)
+  dim(res) <-  res_dim
+  dimnames(res) <- res_labels
   res
 }
