@@ -73,7 +73,10 @@ test_that("idempotent function equivalent to permutation",  {
   x <- array(1:24, 4:2,
     dimnames = list(LETTERS[1:4], letters[24:26], letters[1:2]))
 
-  perms <- unique(alply(as.matrix(subset(expand.grid(x=0:3,y=0:3,z=0:3), (x+y+z)>0 & !any(duplicated(setdiff(c(x,y,z), 0))))), 1, function(x) setdiff(x, 0)))
+  perms <- unique(alply(as.matrix(subset(expand.grid(x=0:3,y=0:3,z=0:3),
+                                         (x+y+z)>0 & !any(duplicated(setdiff(c(x,y,z), 0))))),
+                        1,
+                        function(x) setdiff(x, 0)))
 
   aperms <- llply(perms, function(perm) aperm(x, unique(c(perm, 1:3))))
   aaplys <- llply(perms, function(perm) aaply(x, perm, identity))
@@ -88,15 +91,30 @@ test_that("idempotent function equivalent to permutation",  {
 
 })
 
-test_that("alply optionally sets dims and dimnames attribute", {
+test_that("alply sets dims and dimnames, equivalence to permutation", {
   x <- array(1:24, 4:2,
-             dimnames = list(LETTERS[1:4], letters[24:26], letters[1:2]))
-  perms <- unique(alply(as.matrix(subset(expand.grid(x=0:3,y=0:3,z=0:3), (x+y+z)>0 & !any(duplicated(setdiff(c(x,y,z), 0))))), 1, function(x) setdiff(x, 0)))
+             dimnames = list(dim1=LETTERS[1:4], dim2=letters[c(24,26,25)], dim3=NULL))
+  #unlisting an alply should leave elements the the same order as
+  #an aperm with the unused dimensions shifted to the front.
+  #check against all ways to split this array
+  p_alply <- unique(alply(as.matrix(subset(expand.grid(x=0:3,y=0:3,z=0:3),
+                                         (x+y+z)>0 & !any(duplicated(setdiff(c(x,y,z), 0))))),
+                        1, function(x) setdiff(x, 0)))
+  p_aperm <- llply(p_alply, function(x) union(setdiff(1:3, x), x))
+  alplys <- lapply(p_alply, alply, .data=x, identity, .dims=TRUE)
+  #alply will fill in dimnames on a dim that has none, so match that here
+  dimnames(x)[[3]] <- c("1", "2")
+  aperms <- llply(p_aperm, .fun=aperm, a=x)
 
-  alplys <- lapply(perms, alply, .data=x, identity, .dims=TRUE)
-  m_ply(cbind(perm=perms, ply=alplys), function(perm, ply) {
-    expect_that(dim(ply), is_equivalent_to(dim(x)[perm]))
-    expect_that(dimnames(ply), is_equivalent_to(dimnames(x)[perm]))
+  m_ply(cbind(x_perm=p_alply, x_ply=alplys, x_aperm=aperms),
+        function(x_perm, x_ply, x_aperm) {
+          expect_equivalent(dim(x_ply),
+                            dim(x)[x_perm])
+          expect_equivalent(dimnames(x_ply),
+                            dimnames(x)[x_perm])
+          expect_equivalent(dim(x_ply),
+                            dim(x_aperm)[(length(dim(x)) - length(x_perm) + 1):(length(dim(x)))])
+          expect_equivalent(as.vector(unlist(x_ply)), as.vector(x_aperm))
   })
 })
 
