@@ -5,6 +5,8 @@ NEW FEATURES AND FUNCTIONS
 
 * `**ply` gain a `.inform` argument (previously only available in `llply`) - this gives more useful debugging information at the cost of some speed. (Thanks to Brian Diggs, #57)
 
+* `alply`'s output gains dimensions and dimnames, similar to `apply`. Sequential indexing of a list produced by `alply` should be unaffected. (Peter Meilstrup)
+
 * `colwise`, `numcolwise` and `catcolwise` now all accept additional arguments in .... (Thanks to Stavros Macrakis, #62)
 
 * `here` makes it possible to use `**ply` + a function that uses non-standard evaluation (e.g. `summarise`, `mutate`, `subset`, `arrange`) inside a function.  (Thanks to Peter Meilstrup, #3)
@@ -44,7 +46,7 @@ PERFORMANCE IMPROVEMENTS
 
 BUG FIXES
 
-* `*aply` functions now bind list mode results into a list-array (Peter Meilstrup)
+* `*aply` functions now bind list mode results into a list-array. (Peter Meilstrup).
 
 * `*aply` now accepts 0-dimension arrays as inputs. (#88)
 
